# mipt_contests

./: DAC.py  README.md  num2dac.py  playwav.py  repetitions.py  sine.py
1_sem/2_th contest/: problem_hwe  problem_hwe.c
1_sem/3_th contest/: a.out  problem_asb.c  problem_cm.c  problem_cse.c  problem_ms  problem_ms.c  problem_msb  problem_px.c  problem_si  problem_si.c
1_sem/4_th contest/: a.out  bin_trees.h  doc.txt  main.c  problem_bp.c  problem_ed.c  problem_hwk  problem_hwk.c  problem_mc.c  problem_sa.c  problem_sp.c  problem_spN.c  problem_su.c  trees.c
2_sem/7_th/: a.out  problem_as.c  problem_mk.h  test.asm
2_sem/GA/: problem_ja.c
3_sem/JadHW/3_th/NewVersion/: .test.swp  .tst.swp  CMakeLists.txt  a.out  answ  anw  bizzbuzz.c  bizzbuzz.h  bz  in  main.c  test
3_sem/JadHW/3_th/NewVersion/headers/: bizzbuzz.h
3_sem/JadHW/3_th/NewVersion/sources/: bizzbuzz.c  errors.c  main.c
3_sem/JadHW/3_th/NewVersion/tests/: test  test1.txt
3_sem/JadHW/Signals/: CMakeLists.txt  errors.c  recieve.c  send.c  signals.h
3_sem/LFU_Cache/: CMakeCache.txt  CMakeLists.txt  LFU.cpp  LFU.hpp  Makefile  a.out  cache  cache.cpp  cache.hpp  cmake_install.cmake  main.c  main.cpp  test.c  unTests.cpp
3_sem/LFU_Cash/: LFU.hpp
3_sem/ToBegin/: a.out  list.cpp  template.cpp
3_th contest/: for_david.c  paper  paper.c  problem_asb  problem_me  problem_me.c  problem_msb.c  problem_sq  problem_sq.c  problem_sse  problem_sse.c  spital  spital.c
4_th contest/: problem_mc  problem_mc.c  problem_sa  problem_sa.c  problem_sp  problem_sp.c  problem_sr  problem_sr.c
Balanced_Tree/: a.out  main.c  menu.c  menu.h  tree.c  tree.h
Hamlet/: Hamlet.cpp  Hamlet.h  Sorting.cpp  a.out  main.cpp  sorted.txt
Stepik/Backspace/: backpack.cpp  backspace.c
Stepik/Bin_Search/: a.out  hack  hack.c  search.c
Stepik/Calculator/: a.out  calculator.c  test.cpp  test.py
Stepik/Counting_Sort/: CS.c  a.out
Stepik/DeHaffman/: a.out  dehaffman.c
Stepik/Dynamic_Backspace/: a.out  gold.c
Stepik/Editing_Distance/: a.out  edit.c
Stepik/Haffman/: a.out  code.c  haffman.c  test.py
Stepik/Inversion/: a.out  inversion.cpp
Stepik/LDS/: a.out  lds.c
Stepik/LSMS/: a.out  lsms.c
Stepik/Max_Sum/: max_sum.c
Stepik/Ordinal_Data/: randomselect.c
(+192 files in other folders)
